--- a/System/TecSys/src/HomePage/LecturerHomePage.form
+++ b/System/TecSys/src/HomePage/LecturerHomePage.form
@@ -958,7 +958,7 @@
                     </properties>
                     <border type="none"/>
                     <children>
-                      <grid id="61003" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                      <grid id="dc034" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                         <margin top="0" left="0" bottom="0" right="0"/>
                         <constraints>
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -967,7 +967,46 @@
                           <background color="-1"/>
                         </properties>
                         <border type="none"/>
-                        <children/>
+                        <children>
+                          <component id="86af3" class="javax.swing.JComboBox" binding="noticeTitleDropDown">
+                            <constraints>
+                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <font size="16"/>
+                              <model/>
+                            </properties>
+                          </component>
+                          <grid id="72325" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                            <margin top="0" left="0" bottom="0" right="0"/>
+                            <constraints>
+                              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties/>
+                            <border type="none"/>
+                            <children>
+                              <scrollpane id="a2d43">
+                                <constraints>
+                                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                                </constraints>
+                                <properties/>
+                                <border type="none" title=""/>
+                                <children>
+                                  <component id="77861" class="javax.swing.JTextArea" binding="noticeDisplayArea">
+                                    <constraints/>
+                                    <properties>
+                                      <editable value="false"/>
+                                      <font size="14"/>
+                                      <lineWrap value="true"/>
+                                      <margin top="0" left="10" bottom="0" right="10"/>
+                                      <wrapStyleWord value="true"/>
+                                    </properties>
+                                  </component>
+                                </children>
+                              </scrollpane>
+                            </children>
+                          </grid>
+                        </children>
                       </grid>
                     </children>
                   </grid>
