--- a/System/TecSys/src/HomePage/LecturerHomePage.form
+++ b/System/TecSys/src/HomePage/LecturerHomePage.form
@@ -623,6 +623,7 @@
                                         <properties>
                                           <editable value="false"/>
                                           <font size="20"/>
+                                          <text value=""/>
                                         </properties>
                                       </component>
                                     </children>
@@ -673,17 +674,19 @@
                                 <properties/>
                                 <border type="none"/>
                                 <children>
-                                  <grid id="5592f" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                                  <grid id="5592f" binding="LecturerHomePageProfile" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                     <margin top="0" left="0" bottom="0" right="0"/>
                                     <constraints>
-                                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                                        <minimum-size width="250" height="250"/>
+                                      </grid>
                                     </constraints>
                                     <properties>
                                       <background color="-2500135"/>
                                     </properties>
                                     <border type="none"/>
                                     <children>
-                                      <component id="970c0" class="javax.swing.JLabel">
+                                      <component id="970c0" class="javax.swing.JLabel" binding="LecturerHomePageProfileLable">
                                         <constraints>
                                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                                         </constraints>
@@ -1262,6 +1265,7 @@
                                             </constraints>
                                             <properties>
                                               <font size="20"/>
+                                              <text value=""/>
                                             </properties>
                                           </component>
                                         </children>
@@ -1288,7 +1292,7 @@
                                       </grid>
                                     </children>
                                   </grid>
-                                  <grid id="780dd" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                                  <grid id="780dd" binding="LecProfileImagePanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                     <margin top="0" left="0" bottom="0" right="0"/>
                                     <constraints>
                                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -1298,12 +1302,15 @@
                                     </properties>
                                     <border type="none"/>
                                     <children>
-                                      <component id="88e84" class="javax.swing.JLabel">
+                                      <component id="88e84" class="javax.swing.JLabel" binding="LecProfileImage">
                                         <constraints>
-                                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                                            <minimum-size width="250" height="250"/>
+                                          </grid>
                                         </constraints>
                                         <properties>
-                                          <text value="Label"/>
+                                          <font size="16"/>
+                                          <text value="Select New Profile Image"/>
                                         </properties>
                                       </component>
                                       <component id="c73b2" class="javax.swing.JButton" binding="uploadImageButton" default-binding="true">
