--- a/System/TecSys/src/HomePage/LecturerHomePage.form
+++ b/System/TecSys/src/HomePage/LecturerHomePage.form
@@ -688,12 +688,16 @@
                                     <children>
                                       <component id="970c0" class="javax.swing.JLabel" binding="LecturerHomePageProfileLable">
                                         <constraints>
-                                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                                            <minimum-size width="200" height="200"/>
+                                          </grid>
                                         </constraints>
                                         <properties>
                                           <font size="20"/>
                                           <foreground color="-16777216"/>
                                           <text value="Profile Image"/>
+                                          <verticalAlignment value="0"/>
+                                          <verticalTextPosition value="0"/>
                                         </properties>
                                       </component>
                                     </children>
@@ -1310,7 +1314,7 @@
                                         </constraints>
                                         <properties>
                                           <font size="16"/>
-                                          <text value="Select New Profile Image"/>
+                                          <text value="Select Profile Image"/>
                                         </properties>
                                       </component>
                                       <component id="c73b2" class="javax.swing.JButton" binding="uploadImageButton" default-binding="true">
