--- a/System/TecSys/src/HomePage/LecturerHomePage.form
+++ b/System/TecSys/src/HomePage/LecturerHomePage.form
@@ -818,7 +818,10 @@
                                         <preferred-size width="150" height="50"/>
                                       </grid>
                                     </constraints>
-                                    <properties/>
+                                    <properties>
+                                      <enabled value="true"/>
+                                      <font name="JetBrains Mono" size="18" style="1"/>
+                                    </properties>
                                   </component>
                                 </children>
                               </grid>
