--- a/System/TecSys/src/HomePage/UndergraduateHomePage.form
+++ b/System/TecSys/src/HomePage/UndergraduateHomePage.form
@@ -761,7 +761,7 @@
                                 <properties/>
                                 <border type="none"/>
                                 <children>
-                                  <component id="a3f8" class="javax.swing.JComboBox">
+                                  <component id="a3f8" class="javax.swing.JComboBox" binding="AttendanceSemesterNo">
                                     <constraints>
                                       <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                         <minimum-size width="50" height="-1"/>
@@ -798,7 +798,7 @@
                                       <text value="Semester No"/>
                                     </properties>
                                   </component>
-                                  <component id="a363f" class="javax.swing.JComboBox">
+                                  <component id="a363f" class="javax.swing.JComboBox" binding="AttendanceLevelNo">
                                     <constraints>
                                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                         <minimum-size width="50" height="-1"/>
