--- a/System/TecSys/src/HomePage/UndergraduateHomePage.form
+++ b/System/TecSys/src/HomePage/UndergraduateHomePage.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="UndergraduateHomePage" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="true" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="1118" height="623"/>
+      <xy x="20" y="20" width="1050" height="551"/>
     </constraints>
     <properties>
       <focusable value="true"/>
@@ -753,7 +753,7 @@
                             <properties/>
                             <border type="none"/>
                             <children>
-                              <grid id="41312" layout-manager="GridLayoutManager" row-count="1" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                              <grid id="41312" layout-manager="GridLayoutManager" row-count="1" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                 <margin top="0" left="0" bottom="0" right="0"/>
                                 <constraints>
                                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -768,24 +768,19 @@
                                       </grid>
                                     </constraints>
                                     <properties>
-                                      <font size="16"/>
+                                      <font size="12"/>
                                       <model>
                                         <item value="1"/>
                                         <item value="2"/>
                                       </model>
                                     </properties>
                                   </component>
-                                  <hspacer id="4bfbc">
-                                    <constraints>
-                                      <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                                    </constraints>
-                                  </hspacer>
                                   <component id="c718b" class="javax.swing.JLabel">
                                     <constraints>
                                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                     </constraints>
                                     <properties>
-                                      <font size="16"/>
+                                      <font size="12"/>
                                       <text value="Level No"/>
                                     </properties>
                                   </component>
@@ -794,7 +789,7 @@
                                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                                     </constraints>
                                     <properties>
-                                      <font size="16"/>
+                                      <font size="12"/>
                                       <text value="Semester No"/>
                                     </properties>
                                   </component>
@@ -805,13 +800,47 @@
                                       </grid>
                                     </constraints>
                                     <properties>
-                                      <font size="16"/>
+                                      <font size="12"/>
                                       <model>
                                         <item value="1"/>
                                         <item value="2"/>
                                         <item value="3"/>
                                         <item value="4"/>
                                       </model>
+                                    </properties>
+                                  </component>
+                                  <component id="d9562" class="javax.swing.JLabel">
+                                    <constraints>
+                                      <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                    </constraints>
+                                    <properties>
+                                      <font size="12"/>
+                                      <text value="Subject Code"/>
+                                    </properties>
+                                  </component>
+                                  <component id="689cb" class="javax.swing.JComboBox" binding="AttendanceSubjectCode">
+                                    <constraints>
+                                      <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                                    </constraints>
+                                    <properties>
+                                      <font size="12"/>
+                                    </properties>
+                                  </component>
+                                  <component id="7a843" class="javax.swing.JLabel">
+                                    <constraints>
+                                      <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                    </constraints>
+                                    <properties>
+                                      <font size="12"/>
+                                      <text value="Subject Status"/>
+                                    </properties>
+                                  </component>
+                                  <component id="d6da0" class="javax.swing.JComboBox" binding="AttendanceSubjectStatus">
+                                    <constraints>
+                                      <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+                                    </constraints>
+                                    <properties>
+                                      <font size="12"/>
                                     </properties>
                                   </component>
                                 </children>
@@ -826,7 +855,7 @@
                             <properties/>
                             <border type="none"/>
                             <children>
-                              <grid id="27934" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                              <grid id="27934" layout-manager="GridLayoutManager" row-count="1" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                 <margin top="0" left="0" bottom="0" right="0"/>
                                 <constraints>
                                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -844,9 +873,45 @@
                                   </component>
                                   <hspacer id="71a28">
                                     <constraints>
-                                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                                      <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                                     </constraints>
                                   </hspacer>
+                                  <component id="9795" class="javax.swing.JLabel">
+                                    <constraints>
+                                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                    </constraints>
+                                    <properties>
+                                      <font size="12"/>
+                                      <text value="Attendance Percentage :"/>
+                                    </properties>
+                                  </component>
+                                  <component id="9ce4b" class="javax.swing.JLabel">
+                                    <constraints>
+                                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                    </constraints>
+                                    <properties>
+                                      <font size="12"/>
+                                      <text value="Label"/>
+                                    </properties>
+                                  </component>
+                                  <component id="457c7" class="javax.swing.JLabel">
+                                    <constraints>
+                                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                    </constraints>
+                                    <properties>
+                                      <font size="12"/>
+                                      <text value="Attendance with Medica Percentage :"/>
+                                    </properties>
+                                  </component>
+                                  <component id="75218" class="javax.swing.JLabel">
+                                    <constraints>
+                                      <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                    </constraints>
+                                    <properties>
+                                      <font size="12"/>
+                                      <text value="Label"/>
+                                    </properties>
+                                  </component>
                                 </children>
                               </grid>
                             </children>
