--- a/System/TecSys/src/HomePage/UndergraduateHomePage.form
+++ b/System/TecSys/src/HomePage/UndergraduateHomePage.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="UndergraduateHomePage" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="true" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="1190" height="551"/>
+      <xy x="20" y="20" width="1190" height="640"/>
     </constraints>
     <properties>
       <focusable value="true"/>
@@ -1010,6 +1010,7 @@
                             <properties>
                               <font size="16"/>
                               <model>
+                                <item value=""/>
                                 <item value="1"/>
                                 <item value="2"/>
                               </model>
@@ -1047,6 +1048,7 @@
                             <properties>
                               <font size="16"/>
                               <model>
+                                <item value=""/>
                                 <item value="1"/>
                                 <item value="2"/>
                                 <item value="3"/>
@@ -1211,6 +1213,7 @@
                                     <properties>
                                       <font size="16"/>
                                       <model>
+                                        <item value=""/>
                                         <item value="1"/>
                                         <item value="2"/>
                                       </model>
@@ -1248,6 +1251,7 @@
                                     <properties>
                                       <font size="16"/>
                                       <model>
+                                        <item value=""/>
                                         <item value="1"/>
                                         <item value="2"/>
                                         <item value="3"/>
